# the-actor

./: .gitignore  Cargo.toml
src/: client_main.rs  main.rs  router_setup.rs  vpn_config.rs
src/front_interface/: direct_tun.rs  jni_receiver.rs  mod.rs
src/handlers/: actor_structure_type.rs  auth_handler.rs  mod.rs  register_handler.rs
src/operational/: data_pack.rs  mod.rs  packet_router.rs  tun_interface.rs
src/receivers/: auth_receiver.rs  mod.rs  register_receiver.rs
src/server/: mod.rs  proxy_internal_server.rs  receiver_info.rs  vpn_internal_server.rs
src/util/: challenge_util.rs  jni_utils.rs  mod.rs  semaphore.rs
src/verbose/: logger.rs
