[package]
name = "actor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "actor-server"
path = "src/main.rs"


[[bin]]
name = "actor-client"
path = "src/client_main.rs"

[dependencies]
the-fourth-server = { path = "the-fourth-server"}
rand = "0.9"
tun = {version = "0.8.0" ,features = ["tokio", "async"]}
etherparse = "0.18.0"
nix = { version = "0.28", optional = true, features = ["fs"] }
cfg-if = "1.0.1"
base64 = "0.21.7"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs"] }